Wire cluster coordinator, registry, and search scatter-gather
- ClusterCoordinator drives node registration/heartbeats through NodeRegistry
- SearchCoordinator fans a query out to registered nodes and merges results
- MemoryMappedIndex shared by coordinator and nodes; MetricRegistry captures
  per-node request metrics
- ConfigurationLoader applies env vars over config file over defaults, and
  k8s manifests deploy coordinator, crawler, and search-node roles
- QuickStart gains a cluster-mode run section